--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -94,7 +94,7 @@
     </header>
 
     <div class="content">
-      <div class="sidebar">
+      <div class="sidebar close">
         <div class="profile-details">
           <img src="img/dungo.jpeg" />
           <span class="profile-name">Zarina Dungo</span>
@@ -429,23 +429,57 @@
     <footer class="footer">
       <div class="footer-left">
         <img src="img/calendar.png" class="footer-img" />
-        <p id="datetime">OCTOBER 23, 2024 - 04:17 AM</p>
+        <p id="datetime" data-date="<%= electionConfig.fakeCurrentDate %>"></p>
       </div>
 
       <div class="footer-center">
         <img src="img/copyright.png" class="footer-img" id="copyright-img" />
         <p>2025 - Fourmula 1</p>
       </div>
+
       <div class="footer-right">
         <img src="img/info.png" class="footer-img" id="info-img" />
         <p>Need help? Click&nbsp;</p>
-        <a href="help_page"> here.</a>
+        <a href="help_page">here.</a>
       </div>
     </footer>
 
+    <script>
+      function formatDate(isoString) {
+        const date = new Date(isoString);
+        const options = {
+          month: "long",
+          day: "2-digit",
+          year: "numeric",
+          hour: "2-digit",
+          minute: "2-digit",
+          hour12: true,
+        };
+        return date.toLocaleString("en-US", options).replace(",", " -").toUpperCase();
+      }
+
+      function updateDateTime() {
+        const datetimeElement = document.getElementById("datetime");
+        if (!datetimeElement) return;
+
+        // Get the initial time from the data attribute
+        let currentTime = new Date(datetimeElement.getAttribute("data-date"));
+
+        function update() {
+          datetimeElement.textContent = formatDate(currentTime);
+          currentTime.setMinutes(currentTime.getMinutes() + 1); // Increment by 1 minute
+        }
+
+        update(); // Set initial formatted date
+        setInterval(update, 60000); // Update every minute (60000ms)
+      }
+
+      document.addEventListener("DOMContentLoaded", updateDateTime);
+    </script>
+
     <script src="admin/js/sidebar.js"></script>
     <script src="admin/js/index_admin.js"></script>
-    <script>
+    <!-- <script>
       // Ensure currentPeriod exists to avoid errors
       if (!electionConfig.currentPeriod) {
         electionConfig.currentPeriod = { name: "N/A", duration: "N/A", waitingFor: null };
@@ -453,6 +487,6 @@
       // Set current phase info in header
       document.getElementById("currentPeriodDisplay").innerText = electionConfig.currentPeriod.name;
       document.getElementById("currentPeriodDuration").innerText = electionConfig.currentPeriod.duration;
-    </script>
+    </script> -->
   </body>
 </html>
