--- a/views/admin/election-vote-tally.ejs
+++ b/views/admin/election-vote-tally.ejs
@@ -202,7 +202,32 @@
           </li>
         </ul>
       </div>
-      <main class="main">Election Results</main>
+      <main class="main">
+        Election Vote Tally
+        <div class="main-left">
+          <h1>Supreme Student Council</h1>
+          <div class="container-ssc" id="container-president"></div>
+          <div class="container-ssc" id="container-vice-president"></div>
+          <div class="container-ssc" id="container-senator"></div>
+          <!-- 🔥 Senators now included -->
+        </div>
+
+        <div class="main-right">
+          <div class="main-right-header">
+            <h1>Local Student Council</h1>
+            <select class="select" id="college-selector">
+              <option value="cafa">College of Architecture and Fine Arts (CAFA)</option>
+              <option value="cal">College of Arts and Letters (CAL)</option>
+              <option value="cbea">College of Business Education and Accountancy (CBEA)</option>
+            </select>
+          </div>
+          <div id="lsc-container">
+            <div class="container-lsc" id="container-lsc-governor"></div>
+            <div class="container-lsc" id="container-lsc-vice-governor"></div>
+            <div class="container-lsc" id="container-lsc-board-member"></div>
+          </div>
+        </div>
+      </main>
     </div>
 
     <footer class="footer">
