--- a/views/about.ejs
+++ b/views/about.ejs
@@ -47,7 +47,7 @@
                 <img src="img/committee.png" class="mini-logo" id="button-committee" alt="Student Government" />
               </div>
               <div class="text-container">
-                <h2><a href="#bulsu" class="montserrat">BulSU and its Student Government Elections</a></h2>
+                <h6><a href="#bulsu" class="montserrat">BulSU and its Student Government Elections</a></h6>
               </div>
             </div>
             <div class="buttons">
@@ -55,7 +55,7 @@
                 <img src="img/logo_tanikala_notext.png" class="mini-logo" id="button-tanikala" alt="TANIKALA Logo" />
               </div>
               <div class="text-container">
-                <h2><a href="#tanikala" class="montserrat">TANIKALA Voting System</a></h2>
+                <h6><a href="#tanikala" class="montserrat">TANIKALA Voting System</a></h6>
               </div>
             </div>
             <div class="buttons">
@@ -63,7 +63,7 @@
                 <img src="img/developer.png" class="mini-logo" alt="Developer Logo" />
               </div>
               <div class="text-container">
-                <h2><a href="#developer" class="montserrat">Developers</a></h2>
+                <h6><a href="#developer" class="montserrat">Developers</a></h6>
               </div>
             </div>
           </div>
@@ -71,7 +71,7 @@
           <br />
           <br />
           <div class="about-text">
-            <h1 class="montserrat" id="bulsu">BulSU and its Student Government Elections</h1>
+            <h2 class="montserrat" id="bulsu">BulSU and its Student Government Elections</h2>
             <br />
             <p>
               Bulacan State University is a premier institution that values quality education and the growth of its students. Every year, the university holds student government elections managed by the University Commission on Student Elections (UCSE). These elections give students the chance to
@@ -85,8 +85,8 @@
             <br />
             <br />
             <div class="title-row">
-              <h1 class="montserrat" id="tanikala">Tanikala&nbsp;</h1>
-              <h1 class="montserrat" id="voting">Voting System</h1>
+              <h2 class="montserrat" id="tanikala">Tanikala&nbsp;</h2>
+              <h2 class="montserrat" id="voting">Voting System</h2>
             </div>
             <br />
             <div>
@@ -137,7 +137,7 @@
 
             <br />
             <br />
-            <h1 class="montserrat" id="developer">The Team Behind TANIKALA</h1>
+            <h2 class="montserrat" id="developer">The Team Behind TANIKALA</h2>
             <br />
 
             <div class="container-picture-holder">
@@ -148,7 +148,7 @@
                 <br />
                 <hr />
                 <br />
-                <h5>Front-end Developer</h5>
+                <p class="role">Front-end Developer</p>
               </div>
               <br />
               <div class="picture-holder">
@@ -158,7 +158,7 @@
                 <br />
                 <hr />
                 <br />
-                <h5>Full-stack Developer</h5>
+                <p class="role">Full-stack Developer</p>
               </div>
 
               <div class="picture-holder" id="leader">
@@ -169,7 +169,7 @@
                 <hr />
                 <br />
                 <div class="center">
-                  <h5>Project Manager<br />Full-stack Developer<br />Front-end Designer</h5>
+                  <p class="role">Project Manager<br />Full-stack Developer<br />Front-end Designer</p>
                 </div>
               </div>
 
@@ -181,10 +181,10 @@
                 <hr />
                 <br />
                 <div class="center">
-                  <h5>
+                  <p class="role">
                     Front-end Developer<br />
                     Front-end Designer
-                  </h5>
+                  </p>
                 </div>
               </div>
 
@@ -195,11 +195,11 @@
                 <br />
                 <hr />
                 <br />
-                <h5>Front-end Designer</h5>
+                <p class="role">Front-end Designer</p>
               </div>
             </div>
             <br />
-            <h2 class="group">Fourmula 1</h2>
+            <h3 class="group">Fourmula 1</h3>
             <br />
             <p>
               The TANIKALA Voting System was developed by Fourmula 1, a group of Bachelor of Science in Mathematics with Specialization in Computer Science students at Bulacan State University. This system originated as their thesis project during their fourth year. The main objective was to develop
