--- a/public/css/about.css
+++ b/public/css/about.css
@@ -101,25 +101,32 @@ li {
 
 .container-picture-holder {
   display: flex;
+  flex-basis: 120%;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: flex-start;
 }
 
 .picture-holder {
-  margin-right: 3%;
   display: flex;
   flex-direction: column;
   flex-basis: 20vw;
   justify-content: center;
   align-items: center;
   padding-top: 2em;
+  padding-left: 0.8rem;
+  padding-right: 0.8rem;
+
+  /* border: 3px solid black; */
   /* align-items: center;
     border: 2px solid red; */
   /* justify-content: flex-start;
     align-items: flex-start; */
 }
 
+.picture-holder h4 {
+  text-align: center;
+}
 hr {
   border: 0.1rem solid var(--color-mediumYellow);
   width: 100%;
@@ -131,8 +138,8 @@ hr {
 
 .picture-holder img {
   border: 1px solid pink;
-  width: 7em;
-  height: 7em;
+  width: 10rem;
+  height: 10rem;
   clip-path: circle(50%);
   object-fit: cover;
 }
@@ -223,4 +230,8 @@ ol {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+}
+
+.role {
+  font-size: 1.3rem;
 }
