--- a/views/admin/candidates.ejs
+++ b/views/admin/candidates.ejs
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="admin/css/election-management.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/sidebar.css" />
 
-    <link rel="stylesheet" type="text/css" href="admin/css/results-lsc.css" />
-    <link rel="stylesheet" type="text/css" href="admin/css/results-scc.css" />
+    <link rel="stylesheet" type="text/css" href="admin/css/vote-tally-lsc.css" />
+    <link rel="stylesheet" type="text/css" href="admin/css/vote-tally-scc.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/candidates.css" />
 
     <!-- Boxicons CDN Link -->
