--- a/views/about.ejs
+++ b/views/about.ejs
@@ -34,8 +34,8 @@
         <div class="main-first">
           <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
           <div class="first-text">
-            <h2 class="montserrat h1-big" id="about">About Us</h2>
-            <p class="montserrat" id="light">Get to know more about the TANIKALA Voting System.</p>
+            <h2 class="montserrat h1-big about">About Us</h2>
+            <p class="montserrat light">Get to know more about the TANIKALA Voting System.</p>
           </div>
           <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
         </div>
