--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -35,8 +35,8 @@
         <div class="main-first">
           <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
           <div class="first-text">
-            <h1 class="montserrat" id="contact">Contact Us</h1>
-            <p class="montserrat" id="light">If you have any questions or feedback, feel free to reach us!</p>
+            <h2 class="montserrat h1-big about">Contact Us</h2>
+            <p class="montserrat light">If you have any questions or feedback, feel free to reach us!</p>
           </div>
           <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
         </div>
@@ -64,12 +64,12 @@
           <div class="second-right">
             <p class="yellow">Email Address:</p>
             <p>For inquiries, please email us at:</p>
-            <a href="https://www.ucse@bulsu.edu.ph" target="_blank">ucse@bulsu.edu.ph</a>
+            <a href="https://www.ucse@bulsu.edu.ph" class="text" target="_blank">ucse@bulsu.edu.ph</a>
             <br />
             <p class="yellow">Facebook Page:</p>
             <p>Connect with us on Facebook:</p>
             <p>University Commission on Student Elections (BulSU UCSE):</p>
-            <a href="https://www.facebook.com/ucsebulsu" target="_blank">https://www.facebook.com/ucsebulsu</a>
+            <a href="https://www.facebook.com/ucsebulsu" class="text" target="_blank">https://www.facebook.com/ucsebulsu</a>
             <br />
             <br />
             <br />
