--- a/public/css/about.css
+++ b/public/css/about.css
@@ -31,6 +31,10 @@
   border: 3px solid black;
 } */
 
+.content-main {
+  /* border: 3px solid black; */
+}
+
 .main-buttons {
   display: flex;
   flex-direction: row;
@@ -117,7 +121,7 @@ li {
   padding-left: 0.8rem;
   padding-right: 0.8rem;
 
-  /* border: 3px solid black; */
+  border: 3px solid black;
   /* align-items: center;
     border: 2px solid red; */
   /* justify-content: flex-start;
@@ -161,7 +165,6 @@ h4 {
   font-family: "Montserrat", Arial;
 }
 
-#about,
 #bulsu,
 #tanikala,
 #developer {
@@ -205,10 +208,6 @@ h5 {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-}
-
-#light {
-  color: var(--color-mediumYellow);
 }
 
 .highlight {
