--- a/public/css/index.css
+++ b/public/css/index.css
@@ -288,7 +288,7 @@ a {
   display: flex;
   flex-direction: row;
   max-height: var(--height-main-first);
-  width: 70%;
+  width: 80%;
   justify-content: center;
   align-items: center;
   margin-top: 1.57%;
@@ -356,4 +356,12 @@ h6 {
 .content-main p,
 li {
   font-size: 1.3rem;
+}
+
+.light {
+  color: var(--color-mediumYellow);
+}
+
+.about {
+  color: var(--color-darkYellow);
 }
